bk_ida/gccida/g3/allocate_dynamic_stack_space
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1654:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1654:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1645:14: note: 'v10' declared here
unsigned int v10; // eax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1655:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1663:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1663:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1666:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1687:25: error: use of undeclared identifier 'machine_mode'
v6 = convert_to_mode( ( machine_mode)v8, v6, 1); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1695:1: error: use of undeclared identifier 'v20'
v20 = force_operand( v19, 0LL), 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1697:6: error: use of undeclared identifier 'v20'
v6 = v20, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1721:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)v11); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1735:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1742:47: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( v37, v6, GEU, 0LL, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 1, v36); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1755:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1763:43: error: use of undeclared identifier 'machine_mode'
v27 = expand_divmod( 0, TRUNC_DIV_EXPR, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v25, v26, 0LL, 1); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1765:21: error: use of undeclared identifier 'machine_mode'
v3 = expand_mult( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v27, v28, 0LL, 1); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1768:18: error: invalid suffix 'xmode' on integer constant
v21 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1769:17: error: invalid suffix 'xmode' on integer constant
if ( *(short *)0xmode == VOIDmode ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1770:32: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v21 = *( ( unsigned __int16 *)&insn_data_0[1234].operand[1] + 8); 
                               ^~~~~~~~~~~
                               insn_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/explow.c:1771:13: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predicate = insn_data_0[1234].operand[1].predicate; 
            ^~~~~~~~~~~
            insn_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/allocate_dynamic_stack_space/src/obj/explow.o] Error 1
